<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:contentDescription="@string/todo"
        android:text="Reminder \nApplication"
        android:textColor="#4FCFCB"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="165dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/clock"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="269dp"
        android:gravity="center"
        android:text="@string/about"
        android:textSize="24sp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="359dp"
        android:gravity="center"
        android:text="@string/this_app_is_about_notifications"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="2dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:textSize="24sp"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="#FDFBFB"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:onClick="goBack"
        android:focusable="true"
        app:srcCompat="@mipmap/back"
        android:layout_alignParentRight="true" />
</RelativeLayout>